--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
         width: 852px;
         height: 500px;
         position: absolute;
+        object-fit: cover;
+        overflow: hidden;
       }
+  img{
+    object-fit: contain;
+    overflow: hidden;
+    }
 /*cars section*/
 .root{
       --secondary-shadow:#a17a69;
@@ -144,8 +150,8 @@
     <marquee>
         Welcome! TO RG CARSHOWROOM....here you can find the best Quality Cars at Affordable price 
     </marquee>
-        <img src="C:/Users/rosha/OneDrive/Documents/fortunershowroom/logo.jpeg" height="50px" class="logo"/> 
-        <img src="C:/Users/rosha/OneDrive/Documents/fortunershowroom/toyota.png"> <i>Let's Buy the happiness</i>
+        <img src="logo.jpeg" height="50px" class="logo"/> 
+        <img src="toyota.png"> <i>Let's Buy the happiness</i>
        <!--navigation bar-->
         <ul class="nbar"> 
          <li><a href="#Home">| Home |</a></li>
@@ -198,7 +204,7 @@
     <input type="checkbox"/>  I hereby agree to receive emails, calls and SMS related to promotional activities and services, by or on behalf of TKM.</h6><br>
     <button type="submit" >SUBMIT</button>
     <button type="reset" >CANCLE</button>
-    <img src="C:/Users/rosha/OneDrive/Documents/fortunershowroom/fortuner.jpg" class="img1" >
+    <img src="fortuner.jpg" class="img1" >
   </form>
 </div>
  <!--cars section-->
@@ -207,21 +213,21 @@
     <div class="skills-wrapper"> 
       <div class="first-set animate__animated animate__pulse"> 
         <img 
-          src="C:\Users\rosha\OneDrive\Documents\fortunershowroom\1.png" 
+          src="1.png" 
           alt="1" 
           title="Classic Fortuner"
           loading="lazy" 
           class="icon icon-card" 
         /> 
         <img 
-          src="C:\Users\rosha\OneDrive\Documents\fortunershowroom\3.png" 
+          src="3.png" 
           alt="2" 
           title="White Toyota Fortuner"
           loading="lazy" 
           class="icon icon-card" 
         /> 
         <img 
-          src="C:\Users\rosha\OneDrive\Documents\fortunershowroom\5.png"
+          src="5.png"
           alt="3" 
           title="Classic Prius"
           loading="lazy" 
@@ -237,14 +243,14 @@
           class="icon icon-card" 
         /> 
         <img 
-          src="C:\Users\rosha\OneDrive\Documents\fortunershowroom\innova crysta.jpeg" 
+          src="innova crysta.jpeg" 
           alt="5" 
           title="Classic Camry"
           loading="lazy" 
           class="icon icon-card" 
         /> 
         <img 
-          src="C:\Users\rosha\OneDrive\Documents\fortunershowroom\land cruiser300.jpeg" 
+          src="land cruiser300.jpeg" 
           alt="6"
           title="Classic Glanza" 
           loading="lazy" 
