--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         margin-left: 1100px;
     }
     .part1{
-        background-image: url(C:/Users/rosha/OneDrive/Documents/fortunershowroom/111.jpg);
+        background-image: url(111.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         position: sticky;
